# atsamv71q21

./: .gitignore  Cargo.toml  LICENSE  device.x  readme.md
examples/led-sample/: Cargo.toml  memory.x
examples/led-sample/src/: main.rs
src/: acc.rs  aes.rs  afec0.rs  afec1.rs  dacc.rs  efc.rs  gmac.rs  gpbr.rs  hsmci.rs  icm.rs  isi.rs  lib.rs  matrix.rs  mcan0.rs  mcan1.rs  mlb.rs  piob.rs  pioe.rs  pmc.rs  pwm0.rs  pwm1.rs  qspi.rs  sdramc.rs  smc.rs  spi0.rs  ssc.rs  tc0.rs  tc3.rs  trng.rs  twihs2.rs  uart0.rs  uart2.rs  usart1.rs  usbhs.rs  utmi.rs  xdmac.rs
src/acc/: acr.rs  idr.rs  ier.rs  isr.rs  mr.rs  wpmr.rs  wpsr.rs
src/aes/: aadlenr.rs  clenr.rs  cr.rs  ctrr.rs  gcmhr.rs  ghashr.rs  idatar.rs  idr.rs  ier.rs  imr.rs  isr.rs  ivr.rs  keywr.rs  mr.rs  odatar.rs  tagr.rs
src/afec0/: cdr.rs  cecr.rs  cgr.rs  chdr.rs  chsr.rs  cosr.rs  cr.rs  cselr.rs  cwr.rs  diffr.rs  ier.rs  imr.rs  isr.rs  over.rs  seq1r.rs  seq2r.rs  tempmr.rs  wpmr.rs
src/afec1/: acr.rs  cher.rs  cocr.rs  cvr.rs  emr.rs  idr.rs  ier.rs  lcdr.rs  mr.rs  shmr.rs  tempcwr.rs  wpsr.rs
src/chipid/: cidr.rs
src/dacc/: acr.rs  cdr.rs  chdr.rs  cher.rs  chsr.rs  cr.rs  idr.rs  ier.rs  imr.rs  isr.rs  mr.rs  trigr.rs  wpmr.rs  wpsr.rs
src/efc/: fcr.rs  fmr.rs  fsr.rs  version.rs  wpmr.rs
src/gmac/: cbscr.rs  cbsisqa.rs  cbsisqb.rs  cse.rs  dcfgr.rs  efrn.rs  efrsh.rs  efrsl.rs  eftn.rs  eftsh.rs  eftsl.rs  hrb.rs  hrt.rs  idr.rs  idrpq.rs  ier.rs  ierpq.rs  imr.rs  imrpq.rs  ipgs.rs  isr.rs  isrpq.rs  man.rs  ncfgr.rs  ncr.rs  nsc.rs  orhi.rs  orlo.rs  othi.rs  otlo.rs  pefrn.rs  pefrsh.rs  pefrsl.rs  peftn.rs  rbqb.rs  (+91 more)
(+1088 files in other folders)
