[package]
name = "atsamv71q21"
version = "0.2.0"
authors = ["miguel"]
edition = "2018"
exclude = ["examples/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "1.0.0"
cortex-m ="0.7.2"
vcell ="0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.14"

[features]
rt = ["cortex-m-rt/device"]
