[package]
name = "led-sample"
version = "0.1.0"
authors = ["Miguel Pérez García <miguelpg_95@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"

[dependencies.atsamv71q21]
path = "../.."
version = "0.2.0"
features = ["rt"]

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.3.0"
